Bug 747469: Add PRInt32 cast to make bounds-check effective, in nsHTMLDocument::ChangeContentEditableCount. r=ehsan